--- a/package.json
+++ b/package.json
@@ -64,9 +64,7 @@
   "keywords": [
     "notifications",
     "adonis",
-    "firebase",
-    "fcm",
-    "gcm"
+    "mail"
   ],
   "bugs": {
     "url": "https://github.com/enniel/adonis-mail-notification-channel/issues"
