--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "nyc node japaFile.js",
     "lint": "standard",
     "lint:fix": "standard --fix",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "postversion": "git push --set-upstream origin master && git push --follow-tags && npm publish"
   },
   "lint-staged": {
     "*.js": [
