--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Evgeny Razumov (enniel)",
   "license": "MIT",
   "dependencies": {
+    "@adonisjs/generic-exceptions": "^2.0.1",
     "lodash": "^4.17.11",
     "node-exceptions": "^3.0.0"
   },
